<resources>
    <string name="app_name">Calculadora De Sueldo</string>
    <string name="menu">Menú Principal</string>
    <string name="modificar_basico">Modificar Básico</string>
    <string name="turnos">Turnos de Trabajo</string>
    <string name="recibo">Recibo de Sueldo</string>
    <string name="fondo">Manejo Fondo:</string>
    <string name="basico">Básico:</string>
    <string name="asistencia">asistencia perfecta:</string>
    <string name="ingresar">Ingrese Monto</string>
    <string name="nRemunerativo">No Remunerativo:</string>
    <string name="volver">Volver</string>
    <string name="modificar">Modificar</string>
    <string name="agregar">Agregar</string>
    <string name="periodo">Periodo</string>
    <string name="I">1</string>
    <string name="II">2</string>
    <string name="III">3</string>
    <string name="IV">4</string>
    <string name="V">5</string>
    <string name="VI">6</string>
    <string name="VII">7</string>
    <string name="VIII">8</string>
    <string name="IX">9</string>
    <string name="X">10</string>
    <string name="XI">11</string>
    <string name="XII">12</string>
    <string name="XIII">13</string>
    <string name="XIV">14</string>
    <string name="XV">15</string>
    <string name="XVI">16</string>
    <string name="XVII">17</string>
    <string name="XVIII">18</string>
    <string name="XIX">19</string>
    <string name="XX">20</string>
    <string name="XXI">21</string>
    <string name="XXII">22</string>
    <string name="XXIII">23</string>
    <string name="XXIV">24</string>
    <string name="XXV">25</string>
    <string name="XXVI">26</string>
    <string name="XXVII">27</string>
    <string name="XXVIII">28</string>
    <string name="XXIX">29</string>
    <string name="XXX">30</string>
    <string name="XXXI">31</string>
    <string name="hint_Turno">Turn</string>
    <string name="ingreso">M= Tañana; T= Tarde; N= Noche; D= Descanso; F= feriado; G= dia del Gremio; V= Vacaciones</string>
    <string name="guardarHorario">Guardar Horario</string>
    <string name="modificarhorario">Modificar Horario</string>
    <string name="items">Items</string>
    <string name="remunerativo">Remunerativo</string>
    <string name="nRemunerativos">No Remun.</string>
    <string name="descuento">Descuentos</string>
    <string name="basic">Básico</string>
    <string name="fond">M. Fondo</string>
    <string name="asist">Asist. Perf.</string>
    <string name="feriado">Feriado</string>
    <string name="gremio">Gremio</string>
    <string name="antig">Antigüedad</string>
    <string name="jubilacion">Jubilación</string>
    <string name="oSocial">O. Social</string>
    <string name="FARyS">F.A.R.y S.</string>
    <string name="solidaria">Cons. Solid.</string>
    <string name="sindical">Cuota Sind.</string>
    <string name="csindical">2</string>
    <string name="bolsillo">Bolsillo</string>
</resources>