<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/AppTheme">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:textAlignment="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/recibo"
        android:textSize="20sp"
        android:textAlignment="center"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:text="@string/periodo"
            android:textSize="15sp"
            android:layout_marginStart="150dp"
            android:gravity="center_vertical"/>

        <EditText
            android:id="@+id/txtPeriodo"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:hint="@string/periodo"
            android:inputType="text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/items"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/remunerativo"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/nRemunerativos"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/descuento"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/basic"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblBasico"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/fond"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblFondo"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="90dp"
        android:layout_height="30dp"
        android:text="@string/asist"
        android:textStyle="bold"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/lblAsistencia"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:textStyle="bold"
        android:textAlignment="textEnd"/>

</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/feriado"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblFeriado"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/gremio"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblGremio"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/antig"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblAntiguedad"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/nRemunerativos"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblNRemunerativo"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_marginStart="100dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/jubilacion"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblJubilacion"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_marginStart="200dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/oSocial"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblOSocial"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_marginStart="200dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/FARyS"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblFarys"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_marginStart="200dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/solidaria"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblSolidaria"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_marginStart="200dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/sindical"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/lblSindical"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="textEnd"
            android:layout_marginStart="200dp"
            android:text="@string/csindical"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/remunerativo"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/nRemunerativos"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/descuento"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:text="@string/bolsillo"
            android:textStyle="bold"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblTotalRem"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="viewEnd"/>

        <TextView
            android:id="@+id/lblTotalNoRem"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="viewEnd"/>

        <TextView
            android:id="@+id/lblTotalDesc"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="viewEnd"/>

        <TextView
            android:id="@+id/lblTotalBolsillo"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:textStyle="bold"
            android:textAlignment="viewEnd"/>

    </LinearLayout>

    <Button
        android:id="@+id/cmdVolver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/volver"
        android:contentDescription="@string/volver"
        android:layout_marginTop="20dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>

</LinearLayout>